fix people list alignment

--- a/public/app/app.css
+++ b/public/app/app.css
@@ -122,11 +122,17 @@ md-tabs.md-default-theme.md-accent > md-tabs-wrapper > md-tabs-canvas > md-pagin
 }
 
 .people-you-label{
-    width: 30px;
+    min-width: 30px;
     line-height: 72px;
-    text-align: center;
-    margin-right: 20px;
+    text-align: left;
+    margin-right: 15px;
     text-transform: uppercase;
+    font-size: 12px;
+}
+
+.people-you-label.hideelement {
+  color: red;
+  opacity: 0;
 }
 
 .profile-info-icon{
@@ -297,4 +303,8 @@ a.md-button.md-default-theme.md-raised, a.md-button.md-raised, .md-button.md-def
 
 .color-gray {
   color: gray;
+}
+
+.space-between {
+  width: 52px;
 }
